[package]
name = "rustee"
version = "0.1.0"
edition = "2021"
description="rust implementation of unix `tee` with more features"
license="MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
thiserror = "1.0"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
env_logger = "0.8.4"

[[bin]]
path = "src/main.rs"
name = "rt"